# DiffUSE

./: .cursorignore  .gitignore  README.md  idea.md  plan.md  pyproject.toml  requirements.txt  setup.py
src/diffuse/: __init__.py
src/diffuse/inference/: __init__.py  predict.py
src/diffuse/models/: __init__.py  diffusion_model.py  diffusion_process.py  physics_model.py
src/diffuse/sim/: __init__.py  generate_data.py  generate_mujoco_data.py  mujoco_data_generator.py  visualize_data_collection.py
src/diffuse/sim/assets/: camera_quad.xml  crazyflie.xml  crazyflie_minimal.xml  crazyflie_standard.xml  heavy_lift_quad.xml  racing_quad.xml
src/diffuse/training/: __init__.py  train.py
src/diffuse/utils/: __init__.py
tests/: __init__.py  conftest.py  run_coverage.py  run_tests.py
tests/inference/: test_inference.py
tests/models/: test_diffusion_model.py  test_diffusion_process.py  test_physics_model.py
tests/training/: test_train.py
tests/utils/: test_data_generation.py
