[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffuse"
version = "0.1.0"
description = "Diffusion-Based State Estimation for Agile UAVs"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.12.0",
    "numpy>=1.20.0",
    "opencv-python>=4.5.0",
    "tqdm>=4.60.0",
    "pillow>=8.0.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "tensorboard>=2.8.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/DiffUSE"
"Bug Tracker" = "https://github.com/yourusername/DiffUSE/issues"

[tool.setuptools]
packages = ["diffuse"]
package-dir = {"" = "src"}
exclude-package-data = {"*" = ["docs/*", "examples/*"]}

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 